--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="selectors.css">
   <link href="https://fonts.googleapis.com/css2?family=Lato:wght@700&display=swap" rel="stylesheet">
-  <title>Color Game</title>
+  <title>Tic-Tac-Toe</title>
 </head>
 <body>
   <h1 id="heading">TIC TAC TOE</h1>
